Only show remove button on hover

--- a/website/css/custom.css
+++ b/website/css/custom.css
@@ -35,3 +35,10 @@ div.board {
 button.removebutton {
 	float: right;
 }
+
+div.item .removebutton {
+    display: none;
+}
+div.item:hover .removebutton {
+    display: inline;
+}
