Add min-height to lists, so there is a droppable area on empty lists

--- a/website/css/custom.css
+++ b/website/css/custom.css
@@ -5,6 +5,10 @@ div.list {
     margin:5px;
 }
 
+div.sortable {
+	min-height:20px;
+}
+
 div.item {
     background-color:green;
     padding-top:1pt;
